--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "^0.19.0",
     "react-native-icons": "^0.7.1",
     "react-native-modalbox": "^1.3.0",
-    "react-native-sqlite-storage": "^2.1.3"
+    "react-native-sqlite-storage": "^2.1.3",
+    "simple-statistics": "^1.0.1"
   }
 }
